feat: add endpoint for kk perbaikan type, run npm run build
